[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/blade_charge_icon_purple.png" type="Texture" id=1]
[ext_resource path="res://UI/blade_charge_icon_green.png" type="Texture" id=2]
[ext_resource path="res://UI/blade_charge_icon_red.png" type="Texture" id=3]
[ext_resource path="res://UI/ChargeUI.gd" type="Script" id=4]

[node name="ChargeUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Bgnd" type="Sprite" parent="."]
position = Vector2( 289.6, 170.6 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )

[node name="PurpCharge" type="Sprite" parent="."]
position = Vector2( 289.6, 170.6 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="GreenCharge" type="Sprite" parent="."]
position = Vector2( 289.6, 170.6 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="RedCharge" type="Sprite" parent="."]
position = Vector2( 289.6, 170.6 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
